Fix padding causing covering of content below

--- a/packages/ui/src/components/Toaster/Toaster.sass
+++ b/packages/ui/src/components/Toaster/Toaster.sass
@@ -28,8 +28,11 @@
 		margin-left: auto
 		margin-right: 0
 		max-width: calc(460px + var(--cui-toaster-inset-left) + var(--cui-toaster-inset-right))
-		padding: var(--cui-toaster-inset)
+		margin-bottom: var(--cui-toaster-inset-bottom)
+		margin-top: var(--cui-toaster-inset-top)
 		overflow: auto
+		padding-left: var(--cui-toaster-inset-left)
+		padding-right: var(--cui-toaster-inset-right)
 		pointer-events: auto
 		width: 100%
 
